--- a/src/pages/css/Badges.css
+++ b/src/pages/css/Badges.css
@@ -1,7 +1,7 @@
 .Badges__hero {
    width: 100%;
    padding: 2rem 0;
-   background: url('../../images/stars.svg'), #1B1B25;
+   background: url('../../img/stars.svg'), #1B1B25;
    background-repeat: repeat;
    margin-bottom: 1rem;
  }
@@ -19,7 +19,7 @@
    padding: 0 1rem;
  }
  
- .Badges_conf-logo {
+ .Badges_cong-logo {
    margin-bottom: 2rem;
  }
  
